src/tests/testfiles/function-declarations/17.txt
testfiles/function-declarations/17.c:2:5: error: incompatible conversion returning 'void *' from a function with return type 'void'
return a;
^
